moved and fixed JsonMaker, added test data